# outgate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yaml
crates/membrane/: Cargo.toml
crates/membrane/src/: main.rs
docs/: development.md  docker.md  github-policy.md  javascript-policies.md  kv.md  outgate.md  policies.md  security-model.md  security.md
examples/: agents.json  github_safe_agent.mjs  intercept.mjs  intercept_deno.mjs  intercept_inject.mjs
javascript/outgate/: README.md  package-lock.json  package.json  tsconfig.json
javascript/outgate/src/: cli.ts  index.ts
javascript/outgate/test/: membrane.test.mjs
src/: body.rs  ca.rs  cli.rs  interceptor.rs  kv.rs  main.rs  outgate_interceptor.js  proxy.rs
