[workspace]
members = [".", "crates/membrane"]
resolver = "2"

[package]
name = "outgate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "outgate"
path = "src/main.rs"

[profile.release]
opt-level = 3           # 0–3 (higher = more optimization)
lto = "fat"             # full link-time optimization (best runtime perf)
codegen-units = 1       # single codegen unit = slower build, faster binary
#strip = "symbols"      # remove symbols to shrink binary
#panic = "abort"        # smaller + faster; disables unwinding
incremental = false     # ensures full optimization (no caching)

[dependencies]
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
deno_resolver = { version = "0.76.0", features = ["sync"] }
deno_core = "0.398.0"
deno_error = "0.7.1"
deno_runtime = "0.253.0"
http-body-util = { version = "0.1", features = ["channel"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio"] }
futures-util = "0.3"
rcgen = { version = "0.14", features = ["x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sys_traits = { version = "0.1.27", features = ["libc", "real"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
dotenvy = { version = "0.15.7" }

[build-dependencies]
deno_runtime = { version = "0.253.0", features = ["snapshot"] }
