[package]
name = "outgate-membrane"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "membrane"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "blocking"] }
url = "2"
