[package]
name = "outgate-membrane"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/fareside/outgate"
license = "Apache-2.0"

[[bin]]
name = "membrane"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "blocking"] }
url = "2"
